# Yggdrasill

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DataTransform/: CMakeLists.txt
DataTransform/include/: DataBuffer.hpp  Serial.hpp  SerialLinuxImpl.hpp  SerialWindowsImpl.hpp  Socket.hpp  TcpClient.hpp  TcpServer.hpp  UdpClient.hpp  UdpServer.hpp
DataTransform/src/: DataBuffer.cpp  MainClient.cpp  MainServer.cpp  Serial.cpp  SerialLinuxImpl.cpp  SerialWindowsImpl.cpp  Socket.cpp  TcpClient.cpp  TcpServer.cpp  UdpClient.cpp  UdpServer.cpp  main.cpp
ProcessListener/: CMakeLists.txt
ProcessListener/src/: MultiSignal.cpp  ProcessListener.cpp  SigProcess.cpp  main.cpp
Utils/: CMakeLists.txt
Utils/include/: Command.hpp  Log.hpp  Singleton.hpp  SpinLock.hpp
Utils/src/: Singleton.cpp  main.cpp
configure/service/: Yggdrasill-ProcessListener.service
doc/: Application.md  ConfigFile.md  DataTransform.md  Deployer.md  DevPlan.md  Executor.md  Layer.md  Persistence.md  ProcessListener.md  ProcessLister.md  Utils.md
